Add contacts section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <hr>
     <h3>Skills</h3>
     <p>HTML, CSS, Javascript, Git, GitHub</p>
+    <hr>
+    <h3>Contact</h3>
+</body>
 </body>
 
 </html>
