Add contact info

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p>HTML, CSS, Javascript, Git, GitHub</p>
     <hr>
     <h3>Contact</h3>
+    <p>You can find me on the interwebs somewhere. I will specify later</p>
 </body>
 </body>
 
